examples/test/testpolicy14469.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14469
  namespace: namespace399
spec:
  podSelector:
    matchLabels:
      key15: value12
      key11: value24
      key47: value30
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value27
          key47: value15
          key27: value27
